--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ html {
     text-decoration: none;
     color: inherit;
 }
+.offline{
+    color:red;
+    background-color: black;
+}
 
 @keyframes clearin {
     from {
