--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
     background-color: #FFF8E7;
     color:#004225;
     font-family: "Noto Serif", serif;
+    font-display: swap;
     animation: 0.5s clearin;
     width: 1000px;
     max-width: 100%;
